# Hiveminde

./: .gitignore  GITHUB_SETUP.md  LICENSE  PUSH_TO_GITHUB.txt  README.md  README_DEPLOY.md  app.py  host_main.py  init_git.bat  node_main.py  pyproject.toml  requirements.txt  setup_git.bat  setup_github.ps1
.github/workflows/: ci.yml
hivemind/: __init__.py  config.py
hivemind/common/: __init__.py  audio_codec.py  device_id.py  latency_calibration.py  protocol.py  volume_control.py
hivemind/host/: __init__.py  audio_capture.py  audio_scheduler.py  clock_sync.py  network_server.py  session_manager.py  web_dashboard.py
hivemind/node/: __init__.py  client.py
scripts/: demo_client.py  demo_receiver.py  demo_sender.py
static/: script.js  styles.css
templates/: index.html
tests/: conftest.py  test_e2e_audio.py  test_ws_server.py
