[tool.vercel]
app = "app:app"

[tool.poetry]
name = "hiveminde"
version = "0.0.0"
description = "HiveMinde web dashboard and host"

[project]
name = "hiveminde"
version = "0.0.0"
description = "HiveMinde web dashboard and host"
dependencies = [
	"opuslib>=3.0.1",
	"flask>=3.0.0",
	"flask-cors>=4.0.0",
	"gunicorn>=21.0.0",
	"websockets>=11.0.3",
]
